Add download function

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-  <h1>Hello World</h1>
-  <input-component></input-component>
+  <input-component width="800px" height="400px"></input-component>
 </body>
 
 </html>
