Add piechart logic

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <input-component width="800px" height="400px"></input-component>
+  <input-component></input-component>
 </body>
 
 </html>
